--- a/webapp/front/front/src/app/modules/feed/feed.component.html
+++ b/webapp/front/front/src/app/modules/feed/feed.component.html
@@ -26,7 +26,7 @@
               <!-- Include the page selector -->
 
               <div *ngFor="let post of postList">
-                <blogpost [post]="post"></blogpost>
+                <app-blog-post [post]="post"></app-blog-post>
               </div>
 
               <app-paginator [totalPages]="totalPages" [currentPage]="currentPage" [pageSize]="pageSize"
