chore: polish up some renaming and selector variables

--- a/webapp/front/front/src/app/features/amenities/amenities-choose-time-page/amenities-choose-time-page.component.html
+++ b/webapp/front/front/src/app/features/amenities/amenities-choose-time-page/amenities-choose-time-page.component.html
@@ -89,7 +89,7 @@
 
             <div class="column-right">
                 <app-calendar-widget></app-calendar-widget>
-                <app-reservations-list></app-reservations-list>
+                <app-amenities-reservations-list></app-amenities-reservations-list>
             </div>
 
             <!-- end column-right -->
