--- a/webapp/front/front/src/app/features/amenities/amenities-reservations-page/amenities-reservations-page.component.html
+++ b/webapp/front/front/src/app/features/amenities/amenities-reservations-page/amenities-reservations-page.component.html
@@ -112,7 +112,7 @@
 
             <div class="column-right">
                 <app-calendar-widget></app-calendar-widget>
-                <app-reservations-list></app-reservations-list>
+                <app-amenities-reservations-list></app-amenities-reservations-list>
             </div>
 
 
