--- a/webapp/front/front/src/app/features/feed/feed-post-detail-page/feed-post-detail-page.component.html
+++ b/webapp/front/front/src/app/features/feed/feed-post-detail-page/feed-post-detail-page.component.html
@@ -10,7 +10,7 @@
       </div>
 
       <div class="column column-middle">
-        <app-post-card *ngIf="post" [post]="post"></app-post-card>
+        <app-feed-post-content *ngIf="post" [post]="post"></app-feed-post-content>
       </div>
 
       <div class="column column-right">
