--- a/webapp/front/front/src/app/shared/components/navbar/navbar.component.html
+++ b/webapp/front/front/src/app/shared/components/navbar/navbar.component.html
@@ -29,7 +29,7 @@
           </div>
 
         </a>
-        <user-profile-widget></user-profile-widget>
+        <app-user-profile-widget></app-user-profile-widget>
       </div>
     </div>
   </nav>
