--- a/webapp/front/front/src/app/features/auth/login-page/login-page.component.html
+++ b/webapp/front/front/src/app/features/auth/login-page/login-page.component.html
@@ -1,6 +1,3 @@
-
-
-
 <!--
 <c:if test="${error == true}">
   <c:set var="errorMessage">
@@ -61,28 +58,22 @@
     <div class="landing-neibo ">
       neibo
     </div>
-    <p class="landing-description" style="mix-blend-mode: screen" i18n>A platform for gated communities that allows you to share news, book courts, and stay connected with your neighbors at all times.</p>
+    <p class="landing-description" style="mix-blend-mode: screen" i18n>A platform for gated communities that allows you
+      to share news, book courts, and stay connected with your neighbors at all times.</p>
 
-    <a class="action-button font-weight-bolder"
-       (click)="openLoginDialog()"
-       i18n>
+    <a class="action-button font-weight-bolder" (click)="openLoginDialog()" i18n>
       Login
     </a>
     <span style="color:var(--lighttext); font-size: 14px; mix-blend-mode: screen">
-            <span i18n>Not a member?</span>
-            <a (click)="openSignupDialog()" class="a-link" i18n>
-                Signup now
-            </a>
+      <span i18n>Not a member?</span>
+      <a (click)="openSignupDialog()" class="a-link" i18n>
+        Signup now
+      </a>
     </span>
 
-    <login-dialog
-      [(showLoginDialog)]="showLoginDialog"
-      [(showSignupDialog)]="showSignupDialog"
-    ></login-dialog>
+    <app-login-dialog [(showLoginDialog)]="showLoginDialog" [(showSignupDialog)]="showSignupDialog"></app-login-dialog>
 
-    <signup-dialog
-      [(showSignupDialog)]="showSignupDialog"
-    ></signup-dialog>
+    <app-signup-dialog [(showSignupDialog)]="showSignupDialog"></app-signup-dialog>
 
     <!--
     <%&#45;&#45; Login dialog&#45;&#45;%>
