--- a/webapp/front/front/src/app/features/service-providers/service-providers-detail-page/service-providers-detail-page.component.html
+++ b/webapp/front/front/src/app/features/service-providers/service-providers-detail-page/service-providers-detail-page.component.html
@@ -17,14 +17,14 @@
                     <div class="f-c-c-c">
                         <!-- Replaces serviceProfileCard.jsp -->
                         <!-- Provide [worker]="..." and other inputs as you see fit -->
-                        <app-service-profile-card [worker]="worker" [averageRating]="worker?.averageRating"
+                        <app-service-providers-content [worker]="worker" [averageRating]="worker?.averageRating"
                             [reviewsCount]="666" [postCount]="666" (openEditProfile)="openEditDialog()">
-                        </app-service-profile-card>
+                        </app-service-providers-content>
 
                         <!-- Replaces tabbedBox.jsp -->
-                        <app-tabbed-box [worker]="worker" [loggedUser]="loggedUser"
+                        <app-service-providers-reviews-and-posts [worker]="worker" [loggedUser]="loggedUser"
                             (openReviewDialog)="openReviewDialog()">
-                        </app-tabbed-box>
+                        </app-service-providers-reviews-and-posts>
                     </div>
                 </div>
 
@@ -35,13 +35,14 @@
                 </div>
 
 
-                <app-review-dialog [reviewDialogVisible]="reviewDialogVisible" [worker]="worker"
+                <app-service-providers-review-dialog [reviewDialogVisible]="reviewDialogVisible" [worker]="worker"
                     (closeDialog)="reviewDialogVisible = false"
-                    (submitReview)="onSubmitReview($event)"></app-review-dialog>
+                    (submitReview)="onSubmitReview($event)"></app-service-providers-review-dialog>
 
                 <!-- Edit Dialog -->
-                <app-edit-dialog [editDialogVisible]="editDialogVisible" [worker]="worker"
-                    (closeDialog)="editDialogVisible = false" (saveProfile)="onSaveProfile($event)"></app-edit-dialog>
+                <app-service-providers-edit-dialog [editDialogVisible]="editDialogVisible" [worker]="worker"
+                    (closeDialog)="editDialogVisible = false"
+                    (saveProfile)="onSaveProfile($event)"></app-service-providers-edit-dialog>
 
 
             </div>
