fix: transition from totalRequests to totalRequests with REQUESTED status, so old ones are ignored

--- a/webapp/front/front/src/app/features/marketplace/marketplace-dashboard-seller-page/marketplace-dashboard-seller-page.component.html
+++ b/webapp/front/front/src/app/features/marketplace/marketplace-dashboard-seller-page/marketplace-dashboard-seller-page.component.html
@@ -138,9 +138,8 @@
                                                         <i class="fa-solid fa-bell pe-1"></i>
                                                         Requests
                                                         <!-- Example: if you want to display # of requests -->
-                                                        <!-- Requires a change in the API -->
                                                         <span class="ms-1">
-                                                            (NUMERO)
+                                                            ({{ product.totalPendingRequests }})
                                                         </span>
                                                         <!-- *ngIf="product.requestCount" -->
                                                     </a>
