feat: implement angular lazy loading with routing and feature modules

--- a/webapp/front/front/src/app/features/amenities/amenities-choose-time-page/amenities-choose-time-page.component.html
+++ b/webapp/front/front/src/app/features/amenities/amenities-choose-time-page/amenities-choose-time-page.component.html
@@ -128,7 +128,7 @@
         </div>
 
         <button (click)="redirectToReservations()" class="action-button success-button font-weight-bolder">
-            <span>Go to Reservations</span>
+            <span>Go to Amenities</span>
         </button>
     </div>
 </div>
