--- a/webapp/front/front/src/app/features/marketplace/marketplace-product-preview/marketplace-product-preview.component.html
+++ b/webapp/front/front/src/app/features/marketplace/marketplace-product-preview/marketplace-product-preview.component.html
@@ -25,7 +25,7 @@
             <div class="img-product placeholder-glow" (click)="onProductClick()">
                 <!-- Replace with actual image fetching logic if needed -->
                 <!-- class="placeholder" -->
-                <img [src]="product.firstImage || 'placeholder-image.jpg'" alt="product image" />
+                <img [src]="getProductImage()" />
             </div>
         </div>
 
