--- a/webapp/front/front/src/app/features/service-providers/service-providers-page/service-providers-page.component.html
+++ b/webapp/front/front/src/app/features/service-providers/service-providers-page/service-providers-page.component.html
@@ -35,7 +35,7 @@
           <ng-template #noWorkersFound>
             <div class="no-posts-found">
               <i class="circle-icon fa-solid fa-magnifying-glass"></i>
-              <span>Workers not found</span>
+              <span>We could not find service provider in you neighborhood yet!</span>
             </div>
           </ng-template>
 
