--- a/webapp/front/front/src/app/shared/components/left-column/left-column.component.html
+++ b/webapp/front/front/src/app/shared/components/left-column/left-column.component.html
@@ -60,10 +60,10 @@
             <i class="fa-solid fa-handshake-angle"></i>
             <span i18n>Services</span>
           </a>
-          <a id="reservationsButton" routerLink="/reservations" class="cool-left-button f-r-sb-c"
+          <a id="reservationsButton" routerLink="/amenities" class="cool-left-button f-r-sb-c"
             [ngClass]="{ 'active': channelClass === 'Reservations' }">
             <i class="fas fa-calendar-days"></i>
-            <span i18n>Reservations</span>
+            <span i18n>Amenities </span>
           </a>
           <a id="informationButton" routerLink="/information" class="cool-left-button f-r-sb-c"
             [ngClass]="{ 'active': channelClass === 'Information' }">
