chore: create admin layout for future page creation

--- a/webapp/front/front/src/assets/styles/commons.css
+++ b/webapp/front/front/src/assets/styles/commons.css
@@ -198,7 +198,6 @@ form {
 }
 
 
-
 select,
 input[type="text"],
 input[type="password"],
@@ -533,3 +532,6 @@ p {
 .g-05 {
   gap: 0.5em;
 }
+
+
+/* ...................... */
