--- a/webapp/front/front/src/app/features/auth/login-dialog/login-dialog.component.html
+++ b/webapp/front/front/src/app/features/auth/login-dialog/login-dialog.component.html
@@ -23,14 +23,16 @@
         <div class="centered-column">
           <!-- Email Field -->
           <label>
-            <input id="login-email" type="email" placeholder="Email" class="input" formControlName="email">
+            <input id="login-email" type="email" placeholder="Email" class="input" formControlName="email"
+              autocomplete="email">
             <small class="form-error" *ngIf="loginForm.get('email').invalid && loginForm.get('email').touched">
               *Entered email is not valid
             </small>
           </label>
           <!-- Password Field -->
           <label>
-            <input id="login-password" type="password" placeholder="Password" class="input" formControlName="password">
+            <input id="login-password" type="password" placeholder="Password" class="input" formControlName="password"
+              autocomplete="current-password">
             <small class="form-error" *ngIf="loginForm.get('password').invalid && loginForm.get('password').touched">
               *Password is required
             </small>
