--- a/webapp/front/front/src/app/features/auth/signup-dialog/signup-dialog.component.html
+++ b/webapp/front/front/src/app/features/auth/signup-dialog/signup-dialog.component.html
@@ -56,12 +56,13 @@
         <div class="row">
           <div class="col">
             <label>
-              <input placeholder="Email" type="email" class="input" formControlName="mail" />
+              <input placeholder="Email" type="email" class="input" formControlName="mail" autocomplete="email" />
             </label>
           </div>
           <div class="col">
             <label>
-              <input placeholder="Password" type="password" class="input" formControlName="password" />
+              <input placeholder="Password" type="password" class="input" formControlName="password"
+                autocomplete="new-password" />
             </label>
           </div>
         </div>
