chore: add more admin pages and tags filter widget

--- a/webapp/front/front/src/app/features/admin/admin-layout.component.html
+++ b/webapp/front/front/src/app/features/admin/admin-layout.component.html
@@ -3,11 +3,10 @@
     <div class="container">
         <div class="row init">
             <div class="column-left">
-                <!-- <app-control-panel-left-buttons></app-control-panel-left-buttons> -->
+                <app-admin-sidebar></app-admin-sidebar>
             </div>
 
             <div class="column-middle">
-                <!-- Dynamic content loaded here -->
                 <router-outlet></router-outlet>
             </div>
 
