--- a/webapp/front/front/src/app/features/amenities/amenities-choose-time-page/amenities-choose-time-page.component.html
+++ b/webapp/front/front/src/app/features/amenities/amenities-choose-time-page/amenities-choose-time-page.component.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row init">
             <div class="column-left">
-                <app-left-column></app-left-column>
+                <app-sidebar></app-sidebar>
             </div>
 
             <div class="column-middle">
