--- a/webapp/front/front/src/app/features/calendar/calendar-event-page/calendar-event-page.component.html
+++ b/webapp/front/front/src/app/features/calendar/calendar-event-page/calendar-event-page.component.html
@@ -9,7 +9,7 @@
 
                 <!-- Left Column -->
                 <div class="column-left">
-                    <app-left-column></app-left-column>
+                    <app-sidebar></app-sidebar>
                 </div>
 
                 <!-- Middle Column (Event Card) -->
