--- a/webapp/front/front/src/app/features/feed/feed-page/feed-page.component.html
+++ b/webapp/front/front/src/app/features/feed/feed-page/feed-page.component.html
@@ -10,7 +10,7 @@
 
       <div class="row init">
         <div class="column-left">
-          <app-left-column></app-left-column>
+          <app-sidebar></app-sidebar>
         </div>
 
         <div class="column-middle">
