--- a/webapp/front/front/src/app/features/marketplace/marketplace-page/marketplace-page.component.html
+++ b/webapp/front/front/src/app/features/marketplace/marketplace-page/marketplace-page.component.html
@@ -5,7 +5,7 @@
     <div class="row init">
 
       <div class="column-left">
-        <app-left-column></app-left-column>
+        <app-sidebar></app-sidebar>
       </div>
 
       <div id="center-grid" class="column-center ps-3">
