--- a/webapp/front/front/src/app/features/marketplace/marketplace-product-detail-page/marketplace-product-detail-page.component.html
+++ b/webapp/front/front/src/app/features/marketplace/marketplace-product-detail-page/marketplace-product-detail-page.component.html
@@ -7,7 +7,7 @@
         <div class="row init">
             <div class="column-left">
                 <!-- Left column widgets: Replace this comment with Angular components or *ngIf sections -->
-                <app-left-column></app-left-column>
+                <app-sidebar></app-sidebar>
             </div>
 
             <div id="center-grid" class="column-center ps-3">
