--- a/webapp/front/front/src/app/features/service-providers/service-providers-page/service-providers-page.component.html
+++ b/webapp/front/front/src/app/features/service-providers/service-providers-page/service-providers-page.component.html
@@ -10,7 +10,7 @@
         <!-- Left column -->
         <div class="column-left">
           <!-- Replaces <%@ include file="/WEB-INF/jsp/components/widgets/leftColumn.jsp" %> -->
-          <app-left-column></app-left-column>
+          <app-sidebar></app-sidebar>
         </div>
 
         <!-- Middle column -->
