--- a/webapp/front/front/src/app/features/amenities/amenities-reservations-page/amenities-reservations-page.component.html
+++ b/webapp/front/front/src/app/features/amenities/amenities-reservations-page/amenities-reservations-page.component.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row init">
             <div class="column-left">
-                <app-left-column></app-left-column>
+                <app-sidebar></app-sidebar>
             </div>
 
             <div class="column-middle">
@@ -120,4 +120,5 @@
 
         </div> <!-- end row -->
     </div> <!-- end container -->
+    <app-wave-footer></app-wave-footer>
 </div>
