--- a/webapp/front/front/src/app/features/feed/feed-post-detail-page/feed-post-detail-page.component.html
+++ b/webapp/front/front/src/app/features/feed/feed-post-detail-page/feed-post-detail-page.component.html
@@ -6,7 +6,7 @@
   <div class="container">
     <div class="row">
       <div class="column column-left">
-        <app-left-column></app-left-column>
+        <app-sidebar></app-sidebar>
       </div>
 
       <div class="column column-middle">
