--- a/webapp/front/front/src/app/features/information/information-page/information-page.component.html
+++ b/webapp/front/front/src/app/features/information/information-page/information-page.component.html
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row">
       <div class="column-left">
-        <app-left-column></app-left-column>
+        <app-sidebar></app-sidebar>
       </div>
 
       <div class="column-middle">
