--- a/webapp/front/front/src/app/features/marketplace/marketplace-dashboard-buyer-page/marketplace-dashboard-buyer-page.component.html
+++ b/webapp/front/front/src/app/features/marketplace/marketplace-dashboard-buyer-page/marketplace-dashboard-buyer-page.component.html
@@ -6,7 +6,7 @@
         <div class="row init">
             <!-- Left Column -->
             <div class="column-left">
-                <app-left-column></app-left-column>
+                <app-sidebar></app-sidebar>
             </div>
 
             <!-- Center Grid -->
