--- a/webapp/front/front/src/app/features/marketplace/marketplace-product-requests-page/marketplace-product-requests-page.component.html
+++ b/webapp/front/front/src/app/features/marketplace/marketplace-product-requests-page/marketplace-product-requests-page.component.html
@@ -8,7 +8,7 @@
         <div class="row init">
             <!-- Left Column -->
             <div class="column-left">
-                <app-left-column></app-left-column>
+                <app-sidebar></app-sidebar>
             </div>
 
             <!-- Center Column -->
