--- a/webapp/front/front/src/app/features/service-providers/service-providers-detail-page/service-providers-detail-page.component.html
+++ b/webapp/front/front/src/app/features/service-providers/service-providers-detail-page/service-providers-detail-page.component.html
@@ -9,7 +9,7 @@
                 <!-- Left Column -->
                 <div class="column-left">
                     <!-- Replaces leftColumn.jsp -->
-                    <app-left-column></app-left-column>
+                    <app-sidebar></app-sidebar>
                 </div>
 
                 <!-- Middle Column -->
