--- a/webapp/front/front/src/app/shared/components/right-column/right-column.component.html
+++ b/webapp/front/front/src/app/shared/components/right-column/right-column.component.html
@@ -1,4 +1,5 @@
 <div class="column justify-content-center align-items-center" style="gap: 1em">
     <app-calendar-widget></app-calendar-widget>
-    <!-- <%@ include file="/WEB-INF/jsp/components/widgets/tagsFilterWidget.jsp" %> -->
+    <app-tags-filter-widget></app-tags-filter-widget>
+    <!-- <%@ include file="/WEB-INF/jsp/components/widgets/tagsFilteridget.jsp" %> -->
 </div>
